fixed form error not showing up. now error show up

--- a/src/components/Checkout/Checkout.css
+++ b/src/components/Checkout/Checkout.css
@@ -4,3 +4,7 @@
     border-radius: 10px;
     background: white;
 }
+.error{
+    color: red;
+    display: inline;
+}
